--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -34,6 +34,7 @@
           "${workspaceFolder}/src/game.cpp",
           "${workspaceFolder}/src/piece.cpp",
           "${workspaceFolder}/src/util.cpp",
+          "${workspaceFolder}/src/move.cpp",
           "${workspaceFolder}/test/*.cpp",
           "-o",
           "${workspaceFolder}/bin/test"
