Added basic timing capabilities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,10 @@
         "sstream": "cpp",
         "thread": "cpp",
         "variant": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "cassert": "cpp",
+        "cerrno": "cpp",
+        "cfloat": "cpp",
+        "climits": "cpp"
     }
 }
